@@ -4,6 +4,7 @@
 
 * Added a new option for the shortcode to define the id of the HTML container (useful when we have multiple shortcodes and we want to give a unique style to each instance).
 * Fixed applying CSS in "Page Builder" by SiteOrigin plugin.
+* Fixed applying correct id to ul element when using the shortcode.
 
 = 4.8.0 =
 
